[gd_scene load_steps=6 format=3 uid="uid://de68lx1xqv7fb"]

[ext_resource type="Theme" uid="uid://csr0n32rthycw" path="res://addons/popochiu/engine/objects/graphic_interface/templates/sierra/resources/sierra_theme.tres" id="1_564ah"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/sierra/components/text_popup/sierra_text_popup.gd" id="2_nmcxa"]
[ext_resource type="Texture2D" uid="uid://cmxrewai8t2lm" path="res://addons/popochiu/engine/objects/graphic_interface/resources/sprites/close.png" id="3_rckox"]
[ext_resource type="Texture2D" uid="uid://p32i25numi5e" path="res://addons/popochiu/engine/objects/graphic_interface/resources/sprites/close_highlight.png" id="4_gfs8i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bh5os"]

[node name="SierraTextPopup" type="PanelContainer" groups=["popochiu_gui_popup"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_564ah")
theme_override_styles/panel = SubResource("StyleBoxEmpty_bh5os")
script = ExtResource("2_nmcxa")
script_name = &"SierraTextPopup"

[node name="PopupPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PopupPanel/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.180392, 0.172549, 0.607843, 1)
text = "Text options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="TextureButton" parent="PopupPanel/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_rckox")
texture_pressed = ExtResource("4_gfs8i")
texture_hover = ExtResource("4_gfs8i")

[node name="BodyContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="TextSpeedContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer/BodyContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/BodyContainer/TextSpeedContainer"]
layout_mode = 2
text = "Text speed"

[node name="TextSpeed" type="HSlider" parent="PopupPanel/VBoxContainer/BodyContainer/TextSpeedContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
max_value = 0.1
step = 0.01

[node name="DialogStyleContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer/BodyContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/BodyContainer/DialogStyleContainer"]
layout_mode = 2
text = "Style"
horizontal_alignment = 1

[node name="DialogStyle" type="OptionButton" parent="PopupPanel/VBoxContainer/BodyContainer/DialogStyleContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Above character"
popup/item_0/id = 0
popup/item_1/text = "Portrait"
popup/item_1/id = 1
popup/item_2/text = "Caption"
popup/item_2/id = 2

[node name="ContinueModeContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer/BodyContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/BodyContainer/ContinueModeContainer"]
layout_mode = 2
text = "Auto-continue"
horizontal_alignment = 1

[node name="ContinueMode" type="CheckBox" parent="PopupPanel/VBoxContainer/BodyContainer/ContinueModeContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 10
icon_alignment = 2

[node name="FooterContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Ok" type="Button" parent="PopupPanel/VBoxContainer/FooterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "ok"

[node name="Cancel" type="Button" parent="PopupPanel/VBoxContainer/FooterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
